fixed medium link

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ html {
         </a>
       </div>
       <div class="col-lg-2 col-md-4 mb-4">
-        <a href="https://medium.com/@amiruthakarthi" target="_blank">
+        <a href="https://medium.com/@valliintine" target="_blank">
           <img src="icons/medium.png" alt="Medium" class="social-icon">
           Medium
         </a>
