--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link rel="icon" href="icons/favicon.ico" type="image/x-icon">
+<link rel="icon" href="icons/favicon-32x32.png" sizes="32x32" type="image/png">
+<link rel="icon" href="icons/favicon-16x16.png" sizes="16x16" type="image/png">
+<link rel="icon" href="icons/apple-touch-icon.png" sizes="16x16" type="image/png">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>About Section</title>
